many small final touches before bruno reads

--- a/CogSciNAP_reSubmit.Rmd
+++ b/CogSciNAP_reSubmit.Rmd
@@ -13,14 +13,15 @@ authornote: |
 
 abstract: |
   *Sonority* is a fundamental notion in phonetics and phonology, central to many descriptions of the syllable and evidently useful as a predictor of phonotactics.
-  Although widely-accepted, sonority lacks a clear basis in speech articulation or perception, and traditional sonority principles, which were not designed to be compatible with cognitive capacities, exhibit systematic gaps in empirical coverage. Traditional sonority models have been exclusively based on discrete and symbolic machinery.
+  Although widely-accepted, sonority lacks a clear basis in speech articulation or perception, and traditional sonority principles, 
+  which have been exclusively based on discrete and symbolic machinery, and were not designed to be compatible with cognitive capacities, exhibit systematic gaps in empirical coverage.
   Against this backdrop, we propose an incorporation of symbol-based and signal-based models to adequately account for sonority with two complementary models.
   We claim that sonority is primarily a perceptual phenomenon related to pitch, driving the optimization of syllables as pitch-bearing units. We suggest a measurable acoustic correlate for sonority in terms of *periodic energy*, and we provide a novel principle that can account for syllabic well-formedness, the *Nucleus Attraction Principle* (NAP).
-  We present two perception experiments that test our two NAP-based models against four traditional sonority models and we use a Bayesian data analysis approach to test and compare them. We show that our two NAP models retain the highest degree of complementarity while one of them is superior to all the other models we tested. 
-  We interpret the results as providing strong support for our proposals:
+  We present perception experiments that test our two NAP-based models against four traditional sonority models and we use a Bayesian data analysis approach to test and compare them. Our symbolic model outperforms all the other models we test, while our continuous bottom-up model manages to reach the second place, along the best tradtional models.
+    We interpret the results as providing strong support for our proposals:
   (i) the designation of periodic energy as sonority's correlate; 
   (ii) the incorporation of continuity in phonological models, and; 
-  (iii) the dual- model strategy that separates and integrates symbol-based top-down processes and signal-based bottom-up processes.
+  (iii) the dual- model strategy that separates and integrates symbol-based top-down processes and signal-based bottom-up processes in perception.
   
 keywords          : "Sonority; Periodic energy; Bayesian data analysis; Phonetics and Phonology"
 wordcount         : "X"
@@ -706,20 +707,23 @@ We assume here that a proper model of speech perception involves a bottom-up rou
 
 As two complementary inference routes, the top-down and bottom-up modes should not be considered equal. The bottom-up route is the source of learned linguistic distinctions, it is functionally motivated by the laws of physics and the limitations of the perceptual and cognitive systems of the communicating agents. In contrast, the top-down route is based on linguistic experience and superficial inferences that reflect the history of the symbols in the system (i.e., the distributional probabilities of recurring patterns). In other words, top-down inferences reflect functionally motivated behaviors only indirectly, as the outcome of learning the superficial expressions of functionally-motivated (bottom-up) dynamics.
 
-Sonority in our account is strongly related to pitch perception and the major role of pitch in  all language systems, whether it's lexical *tone* in tone languages or the post-lexical *tunes* of intonation systems in all the known human languages. We claim that sonority is related to the strength and quality of pitch perception, serving as a measure of *pitch intelligibility* that acts as a universal drive to optimize the pitch-bearing ability of syllabic units (see Section \@ref(sec:dynamic)). 
+Sonority in our account is strongly related to pitch perception and the major role of pitch in  all language systems, whether it's lexical *tone* in tone languages or the post-lexical *tunes* of intonation systems in all the known human languages. We claim that sonority is related to the strength and quality of pitch perception, serving as a measure of *pitch intelligibility* that acts as a universal drive to optimize the pitch-bearing ability of syllabic units (see Section \@ref(sec:sonPitch)). 
 
 We suggest a measurable acoustic correlate for sonority in terms of *periodic energy*, and we propose a novel principle that accounts for syllabic well-formedness based on general principles of competition in real-time, the *Nucleus Attraction Principle* (NAP). We implement NAP with two complementary models (see Section \@ref(sec:modelimp)): (i) a bottom-up model that directly analyzes continuous acoustic signals; and (ii) a top-down model that is based on discrete segments such as consonants and vowels. 
 
 We present a series of syllable count tasks in Section \@ref(sec:experiments), 
-designed in order to test our two NAP-based models (applying NAP with bottom-up and top-down approaches) against four traditional sonority models, considering two types of common sonority hierarchies together with two types of common sonority principles---the *Sonority Sequencing Principle* (SSP) and the *Minimum Sonority Distance* (MSD).
+designed in order to test our two NAP-based models (applying NAP with bottom-up and top-down approaches) against four traditional sonority models, considering two types of common sonority hierarchies combined with two types of common sonority principles---the *Sonority Sequencing Principle* (SSP) and the *Minimum Sonority Distance* (MSD).
 
-We use a Bayesian data analysis approach to test and compare the six different sonority models. Whereas all the different models are found to be capable of predicting the experimental results to a good extent, the symbolic top-down version of NAP is shown to be the superior model. The bottom-up model of NAP comes in second alongside a few of the traditional models. Interestingly, some of the results suggest a relatively high degree of complementarity between the two NAP models, even though they represent a the same principle. This is a desirable result for our framework, which advocates the need for two complementary models, both dynamic and symbolic.
+We use a Bayesian data analysis approach to test and compare the six different sonority models. Whereas all the different models are found to be capable of predicting the experimental results to a good extent, the symbolic top-down version of NAP is shown to be the superior model. The bottom-up model of NAP comes in second alongside a few of the traditional models. Interestingly, some of the results suggest a relatively high degree of complementarity between the two NAP models, even though they represent the same principle. This is a desirable result for our framework, which advocates the need for two complementary models, both dynamic and symbolic.
 
-Our synergy of proposals has many advantages over traditional sonority accounts, including methodological aspects, theoretical perspectives, and, essentially, a better empirical coverage. In Subsection \@ref(sec:discussion2) we interpret the results of the main confirmatory experiments and in Section \@ref(sec:genDiscussion) we address some relevant implications, 
-where we discuss the usefulness of the top-down vs. bottom-up distinction instead of the common use of the phonology--phonetics dichotomy to express the distinction between discrete and continuous aspects of linguistic sound systems (Subsection \@ref(sec:dichotomies)).
-We also discuss the division of labor between sonority and other phonotactic factors, demonstrated with a holistic account of the phenomenon of /s/-stop clusters (Subsection \@ref(sec:division)), before we present our concluisons in Section \@ref(sec:conclusions). 
+Our synergy of proposals has many advantages over traditional sonority accounts, including methodological aspects, theoretical perspectives, and, essentially, a better empirical coverage. In Subsection \@ref(sec:discussion2) we interpret the results of the main confirmatory experiments and in Section \@ref(sec:genDiscussion) we address some relevant implications, where we discuss the division of labor between sonority and other phonotactic factors, demonstrated with a holistic account of the phenomenon of /s/-stop clusters (Subsection \@ref(sec:division)). Finally, we also discuss the debate about the universality of sonority in light of our work (Subsection \@ref(sec:projection)), before we present our concluisons in Section \@ref(sec:conclusions).
 
-In the remainder of this Introduction, we briefly present the relevant background on traditional sonority hierarchies and sonority principles, emphasizing their rationale, their application, and their inherent flaws (Subsections \@ref(sec:hierarchies)-\@ref(sec:failures)). 
+<!-- usefulness of the top-down vs. bottom-up distinction instead of the common use of the phonology--phonetics dichotomy to express the distinction between discrete and continuous aspects of linguistic sound systems (Subsection \@ref(sec:dichotomies)). -->
+<!-- We also discuss the division of labor between sonority and other phonotactic factors, demonstrated with a holistic account of the phenomenon of /s/-stop clusters (Subsection \@ref(sec:division)), before we present our concluisons in Section \@ref(sec:conclusions).  -->
+
+In the remainder of this Introduction, we briefly present the relevant background on traditional sonority hierarchies and sonority principles (Subsection \@ref(sec:sonback)), and on the tension between discrete and symbolic entities on the one hand, and contious dynamic events on the other hand, in liguistic models of phonology (Subsection \@ref(sec:lingMod)).
+
+<!-- emphasizing their rationale, their application, and their inherent flaws (Subsections \@ref(sec:hierarchies)-\@ref(sec:failures)).  -->
 
 ## Sonority Background {#sec:sonback}
 
@@ -1210,7 +1214,7 @@ Although less commonly used compared to averaging or peak detection [see meta-an
 Summing takes measurements from the whole duration of a unit, allowing it to accumulate the individual measurements at each time point, and, in contrast to averaging, to consider the contribution of duration at the final calculation (rather than normalize over it).
 Summing is therefore essentially different from averaging, as well as from peak extraction, in that it is capable of uncovering the quantitative difference between two periodic sounds that have similar amplitude envelopes yet they differ in duration. 
 
-The contribution of duration to sonority was convincingly illustrated in the seminal work of @price1980sonority, whereby the perception of disyllabic English words like *polite* /pəlʌɪt/ was shown to take place when the duration of the sonorant /l/ in the superficially related monosyllabic word *plight* /plʌɪt/ was manipulated, essentially leading to the perception of another syllable when the duration of the sonorant was increased [see also @berent2007we]. Importantly, the periodic energy mass, which is the integral of power and duration, is the only measurement of the three basic alternatives for continuous curve measurement---sum, average or peak---that is capable of accounting for the contribution of duration to perception of sonority.
+The contribution of duration to sonority was convincingly illustrated in the seminal work of @price1980sonority, whereby the perception of disyllabic English words like *polite* /pəlʌɪt/ was shown to take place when the duration of the sonorant /l/ in the superficially related monosyllabic word *plight* /plʌɪt/ was manipulated, essentially leading to the perception of another syllable when the duration of the sonorant was increased [see also @berent2007we; @wilson2013bayesian; @wilson2014effects]. Importantly, the periodic energy mass, which is the integral of power and duration, is the only measurement of the three basic alternatives for continuous curve measurement---sum, average or peak---that is capable of accounting for the contribution of duration to perception of sonority.
 
 It is therefore useful to locate the *center of mass* within regions of interest as a measurement that is sensitive to the two axes of the periodic energy mass---duration (x-axis) and power (y-axis). The center of mass can be viewed as the point in time in which the area under the curve is split into two equal parts. The location of the center of mass in time (x-axis) is attracted to the peak of the curve (on the y-axis), where it is expected to be found with a perfectly symmetrical shape. However, the center of mass most often diverges from the peak of the main rise-fall fluctuations so as to reflect asymmetries in the overall distribution of the mass, either leftward or rightward. The center of mass of the periodic energy curve (henceforth CoM) follows a methodology that was introduced with the *Tonal Center of Gravity* [@barnes2012tonal] by calculating a weighted average time point that uses a continuous time series as the weighting term. The equation in \@ref(eq:com) is used to locate the average point in time (*t*), weighted by continuous periodic energy (*per*) at discrete time points:
 
@@ -2490,7 +2494,7 @@ A superficial formal generalization that can illustrate these results in symboli
 
 Our experimental results provide strong support for our synergy of proposals, including our choice of sonority's perceptual basis and acoustic correlate, the incorporation of continuous entities and in phonological models, and the dual-route modeling strategy that accounts for both top-down and bottom-up inferences with separate compatible machinery. The following subsections discuss two important implications that are borne out of our interpretation of the results: 
 (i) in the following subsection (\@ref(sec:division)) we discuss a potential phonotactic division of labor, demonstrated with a more holistic account of /s/-stop clusters; 
-(ii) in Subsection \@ref(sec:projection) we discuss the universality of sonority, with special attention to the body of works by Iris Berent and her colleagues.
+(ii) in Subsection \@ref(sec:projection) we discuss the universality of sonority, with special attention to the body of works by Iris Berent and her colleagues, as well as to the works of the physicist and theoretical biologist, Howard Pattee (Subsection \@ref(sec:compofmind)).
 
 ##		Phonotactic Division of Labor {#sec:division} 
 
@@ -2514,7 +2518,7 @@ Eventually, it is important to remember that the problem with */s/-stop* cluster
 
 ###   Towards a holistic account of /s/-stop clusters
 
-NAP's account of the well-formedness of */s/-stop* clusters does not suffice to explain this phonotactic phenomenon since there is nothing in NAP that is specific to sibilants or stops that would make the specific combination of a sibilant and a following stop consonant stand out. In fact, any voiceless element is practically invisible to NAP as it is only sensitive to portions of the speech signal that contain sufficient periodic energy. Indeed, the predictions of NAP, which were corroborated in the experimental results (see Subsection \@ref(#sec:results)), expect non-sibilant counterparts of /s/, like /f/ in the cluster *ftV*, to pattern with *spV* and *ʃpV*. Furthermore, *NAP~bu~* successfully predicted that all the voiceless-initial clusters in the experiment---including the */s/-stop* clusters---generally pattern together as well-formed, as far as sonority-based restrictions are concerned.
+NAP's account of the well-formedness of */s/-stop* clusters does not suffice to explain this phonotactic phenomenon since there is nothing in NAP that is specific to sibilants or stops that would make the specific combination of a sibilant and a following stop consonant stand out. In fact, any voiceless element is practically invisible to NAP as it is only sensitive to portions of the speech signal that contain sufficient periodic energy. Indeed, the predictions of NAP, which were corroborated in the experimental results (see Subsection \@ref(sec:results)), expect non-sibilant counterparts of /s/, like /f/ in the cluster *ftV*, to pattern with *spV* and *ʃpV*. Furthermore, *NAP~bu~* successfully predicted that all the voiceless-initial clusters in the experiment---including the */s/-stop* clusters---generally pattern together as well-formed, as far as sonority-based restrictions are concerned.
 This may suffice to explain why */s/-stop* clusters are tolerated, but not why they are so often preferred over other obstruent combinations. The complete phonotactic story of */s/-stop* clusters thus requires an integrative explanation, in which sonority only plays a limited role. 
 
 First, there are various reasons to assume that *fricative-stop* clusters are better-formed than *stop-stop* clusters. This generalization is traditionally captured in abstract formal phonological constraints like the *Obligatory Contour Principle* [OCP; going back to @leben1973suprasegmental; and @goldsmith1976autosegmental], which acts as a general dissimilatory requirement banning two successive units of the same type. The OCP in this case may be the reflection of an articulatory disadvantage of the *stop-stop* configuration since it should be harder to coordinate two successive closure and release gestures, whereby air pressure is built twice within the span of a complex onset.
@@ -2530,14 +2534,10 @@ Here, the notion of cue robustness serves to explain why sibilants, with their s
 The three phonotactic perspectives are complementary, and although they do not represent an exhaustive list of phonotactic pressures, we need at least these three---*sonority*, *cue robustness*, and *articulatory dissimilation*---in order to properly appreciate the phonotactic phenomenon of */s/-stop* clusters. According to this more holistic account, */s/-stop* clusters are relatively well-formed in terms of sonority because they are not competing for the nucleus, they are well-formed in terms of articulatory coordination complexity due to the two dissimilar successive gestures, where the stop is released into the following vowel, and, finally, they are robust in terms of their acoustic cues: 
 stops in C~2~ can be released into a vowel to optimize the effect of the burst in the release phase, while sibilants retain strong cues to their identity thanks to their unique spectral profile, which helps them stand out even in C~1~ positions of complex onset clusters.
 
-##		Universality of Sonority {#sec:projection}
+##		The Universality of Sonority {#sec:projection}
 
 A consistent interest within theoretical phonology concerns the universality of sonority-based principles. An impressive volume of publications devoted to this question can be found in the works of Iris Berent and her colleagues, starting with @berent2007we, and followed by many subsequent studies.[^cf-berentslist]
 Berent et al. collected mostly behavioral data from perception tasks, where subjects of various different language backgrounds were found to adhere to the SSP, even when presented with combinations that are not attested in their language. The patterns under Berent's consistent scrutiny are usually limited to a set of initial clusters with an onset rise (e.g., *blif*), an onset plateau (e.g., *bdif*) and an onset fall (e.g., *lbif*). Since /s/-clusters and sonorant plateaus are absent from these studies, Berent's experimental results with SSP-based models are largely compatible with NAP, where the hierarchy *blif* (3) $>$ *bdif* (2) $>$ *lbif* (0) is maintained in *NAP~td~* (model scores in brackets).[^cf-napbucant] 
-
-[^cf-berentslist]: For example, @berent2008language; @berent2011syllable; @berent2012language; @berent2012universalsk; @berent2013phnological; @berent2014languagesk; @gomez2014language; @zhao2015universalsk; @berent2015role; @lennertz2015onthesonority; @berent2017origins. 
-
-[^cf-napbucant]: *NAP~bu~* cannot make such determinations based on symbolic representations, but it should be expected to generally follow the same trends in the vast majority of cases.
 
 Berent and her colleagues present these findings in support of the innateness hypothesis, assuming that all humans share a universal linguistic knowledge, which is genetically encoded (the *Universal Grammar* in generative traditions). 
 The universality of sonority principles thus implies innate knowledge of ordinal sonority hierarchies that map onto a discrete representation of the speech signal, with mechanisms that compute the sonority slopes within syllables to determine well-formedness.
@@ -2545,16 +2545,24 @@ The universality of sonority principles thus implies innate knowledge of ordinal
 The interpretation of Berent's findings has been a matter of interest in the literature. Some responses, like @daland2011explaining and @hayes2011interpreting, have argued that the universal phonotactic behaviors that Berent et al. present can be shown to result from speakers' ability to generalize categories and distributions from the attested lexicon, and use analogy and probabilities to predict unattested forms. 
 Such models can successfully apply statistical learning methods based on the lexicon, without a requirement for prior formal knowledge of sonority [e.g., @jurafsky2009speech; @coleman1997stochastic; @vitevitch2004webbasedsk; @hayes2008maximum; @hayes2011interpreting; @bailey2001determinants; @albright2009feature; @futrell2017generative; @jarosz2017inputsk; @mayer2019phonotacticsk; and @mirea2019usingsk]. 
 
-Interestingly, connectionist models, such as @goldsmith1992local, @laks1995connectionistsk and @tupper2012sonority, also seem to be quite compatible with what is considered here as the symbolic version of NAP. Connectionist models were historically related to an opposition to the classic symbol-based models (see Subsection \@ref(sec:connectionism)). However, the inputs and outputs of these models are expressed in discrete symbols and they are designed to capture generalizations in terms of the weights of connections in the system, which may serve as a good mechanistic description of top-down operations. 
+Interestingly, connectionist models, such as @goldsmith1992local, @laks1995connectionistsk @smolensky2014optimization and @tupper2012sonority, also seem to be quite compatible with what is considered here as the symbolic version of NAP. Connectionist models were historically related to an opposition to the classic symbol-based models (see Subsection \@ref(sec:connectionism)). However, the inputs and outputs of these models are expressed in discrete symbols and they are designed to capture generalizations in terms of the weights of connections in the system, which may, indeed, serve as a good mechanistic description of top-down operations. 
+Likewise, many other models that successfully describe phonotactic knowledge, such as the Bayesian models in @wilson2013bayesian; and @wilson2014effects, are essentially describing what we consider here to be the top-down mode of the system, which is somewhat disconnected from the physical and cognitive sources of phonotactic phenomena.
 
-In contrast to traditional sonority principles, NAP was designed to be compatible with general cognitive processes and the perceptual and cognitive systems, such that no unique assumptions are required for innate formal knowledge of sonority. 
-Sonority-based patterns in NAP arise from the general cognitive process that underlies the parsing of the stream of speech into syllables with a pitch-bearing nucleus (i.e., nucleus competition). This requirement for pitch-bearing units may be explained in evolutionary timescales as the inevitable result of the important role of pitch in speech communication [@bolinger1978intonation; @cutler1997prosody; @roettger2019tune] and the observation that tune-text integration occurs with syllable-sized units [e.g. @goldsmith1976autosegmental; @liberman1975intonationalsk; @pierrehumbert1980phoneticssk; @ladd2008intonational]. 
+In contrast to traditional sonority principles, NAP was designed to be compatible with general cognitive processes and auditory perception, such that no unique assumptions are required for innate formal knowledge of sonority. 
+Sonority-based patterns in NAP arise from the general cognitive process that underlies the parsing of the stream of speech into syllables with a pitch-bearing nucleus (i.e., nucleus competition). This requirement for pitch-bearing units may be explained in evolutionary timescales as the inevitable result of the important role of pitch in speech communication [@bolinger1978intonation; @cutler1997prosody; @roettger2019tune] given the observation that tune-text integration occurs with syllable-sized units [e.g., @goldsmith1976autosegmental; @liberman1975intonationalsk; @pierrehumbert1980phoneticssk; @ladd2008intonational]. 
 
-The NAP approach appears capable of synthesizing the different views on the origins of universal sonority. Like many of the works by Berent and her colleagues, the bottom-up model of NAP can explain the universality of sonority as the natural development of communication systems that exploit the auditory effects of pitch. The top-down model of NAP is, at the same time, very much in line with phonotactic learners, where it is possible to learn the regularities of language from the symbolic abstractions that reflect the speakers' knowledge in stable forms. 
+The NAP approach appears capable of synthesizing the different views on the origins of universal sonority. 
+<!-- Like many of the works by Berent and her colleagues,  -->
+The bottom-up model of NAP can explain the universality of sonority as the natural development of communication systems that exploit the auditory effects of pitch. The top-down model of NAP is, at the same time, very much in line with phonotactic learners, where it is possible to learn the regularities of language from the symbolic abstractions that reflect the speakers' knowledge in stable forms. 
 Top-down inferences reflect the history of the distribution of recognized symbols as they appear in the lexicon of the ambient language, only indirectly expressing the functional aspects that we see in the bottom-up route since they reflect the surface manifestations of the functionally-motivated (bottom-up) dynamics.
 
-To conclude, bottom-up NAP subsumes the innateness claims for formal sonority universals with a more general explanation that is based on the workings of the perceptual and cognitive systems and the evolution of languages as pitch-bearing communication systems. At the same time, top-down NAP is in-line with the rationale of statistical learners and the mechanics of connectionist models, which require symbolic interpretation of the signal in order to abstract variable dynamic events with stable forms and generalize over their distributions.
+To conclude, bottom-up NAP subsumes the innateness claims for formal sonority universals with a more general explanation that is based on the workings of the perceptual and cognitive systems and the evolution of languages as pitch-bearing communication systems. At the same time, top-down NAP is in-line with the rationale of statistical learners and the mechanics of connectionist models, which require symbolic interpretation of the signal in order to abstract variable dynamic events with stable forms (e.g., consonants, vowels, phonological features) and generalize over their distributions.
 
+###   The complementarity of mind {#sec:compofmind}
+
+The relationship in this work between the discrete and symbolic modes of language on the one hand, and the continuous and dynamic modes on the other hand, is consistent with the works of physicist and theoretical biologist, Howard Pattee, whose insights have been previously extended to include cognition and human language [see @cariani2001symbols; @raczaszek2008reconciling; and see @pattee2012lawssk for a collection of Pattee's classic papers with contemporary commentary].
+In Pattee's original studies, the interaction between symbolic and dynamic modes was related to symbolic aspects of the DNA and their relationship with the dynamics of proteins. For Pattee, the symbolic and dynamic modes of biological systems are two critical components with specific roles to play: symbols are the stable forms that *harness* dynamic events. Symbols, according to @pattee1987instabilities [337], cannot exist outside of a dynamic system that they *constrain*.
+It is therefore pertinent to understand symbols in language systems with respect to the continuous events that they relate to. In our interpretation, this means that to fully understand sonority we need to address its potential functions in auditory perception and cognition, and their effects in linguistic communication. Although tightly related to top-down symbol-based generalizations, this bottom-up route is a separate process that is based on different driving forces (e.g., laws of physics rather than statistics).
 
 # Conclusion  {#sec:conclusions}
 
@@ -2562,19 +2570,21 @@ This work suggests a synergy of novel theoretical and methodological approaches 
 The novelties that are proposed here for models of sonority, and more generally, for  perception-based models in phonology, will need to amass more supporting evidence from multiple sources in order to be more widely considered, and further developed. 
 We hope that in this paper we laid the foundations for such potential long-term contributions. 
 
-We demonstrated how our set of proposals results in a model of sonority that can account for some of the most persistent problems in phonological theory. 
+In a related work, Anonymous (in press) tests sonority models on diachronic corpus data of Modern Hebrew, which uses general phonemic trascriptions. In such common cases, when lingustic data is already abstracted into stable forms, only the symbolic NAP model is of relevance, and, once again, *NAP~td* outperformed traditional SSP-based accounts.  
+
+In these works, we demonstrated how our set of proposals results in a model of sonority that can account for some of the most persistent problems in phonological theory. 
 Our NAP-based models not only present advantages over traditional sonority models in terms of empirical coverage, they also provide functional explanations as to the source and cause of sonority phenomena, linking sonority to pitch intelligibility at the level of the syllable. 
 Furthermore, our dual-route modeling strategy (see Subsection \@ref(sec:complementary)) 
 makes the important distinction between (bottom-up) signal-based inferences and (top-down) symbol-based inferences, thus appropriately predicting the complementary contribution of these two essentially different inference routes of the same linguistic phenomena.
 
-Lastly, this study also provides compelling motivations and strong evidence that support our proposal to link the notion of sonority with periodic energy in the acoustic signal. This proposal entails that the role of periodic energy is of great importance to linguistic analysis of speech, beyond the scope of the current proposal---a partial list of relevant topics includes:
+Lastly, this study also provides compelling motivations and strong evidence that support our proposal to link the notion of sonority with periodic energy in the acoustic signal. This proposal entails that the role of periodic energy is of great importance to linguistic analysis of speech, beyond the scope of the current proposal. A partial list of relevant topics includes the following:
 (i) acoustic descriptions of prosodic *weight* and prosodic *prominence* in terms of periodic energy mass;
 (ii) automatic syllabification procedures based on the smoothed fluctuation rates of the periodic energy curve [useful for a myriad of tasks, including speech rhythmicity studies; see, e.g., @galves2002sonoritysk; @tilsen2013speech; @rasanen2018pre; @lin2020hit]; and
 (iii) improved visualization and analysis of pitch contours in intonation research based on the interaction of the periodic energy and the F0 trajectories 
 (see Anonymous 2018; Anonymous 2019; and Anonymous 2020 for continuous visualization and quantification procedures in intonational phonology using periodic energy).
 <!-- [see @albert2018using; @cangemi2019modellingsk; and @albert2020propersk for continuous visualization and quantification procedures in intonational phonology using periodic energy]. -->
 
-Given the above, we believe that the new findings and approaches presented in this paper will be able to deliver many more valuable insights into old and new problems in phonology and linguistic theory.
+Given the above, we believe that the new approaches presented in this paper will be able to deliver many more valuable insights into old and new problems in phonology and linguistic theory.
 
 
 
@@ -2609,6 +2619,10 @@ Given the above, we believe that the new findings and approaches presented in th
 <!-- [^cf-sstop]: The term */s/-stop cluster* is used here to refer to voiceless sequences of a sibilant, namely /s/ or /ʃ/, that precedes an oral stop, e.g., /p,t,k/. -->
 
 <!-- [^cf-td]: Note that language-specific top-down biases, such as the question of syllabic consonants in a given language, are not covered by our top-down model, *NAP~td~*, which is limited to the universal aspects of NAP. That said, *NAP~td~* succeeded in fitting the data for /z/-initial and nasal-initial clusters within its predictions. -->
+
+[^cf-berentslist]: For example, @berent2008language; @berent2011syllable; @berent2012language; @berent2012universalsk; @berent2013phnological; @berent2014languagesk; @gomez2014language; @zhao2015universalsk; @berent2015role; @lennertz2015onthesonority; @berent2017origins. 
+
+[^cf-napbucant]: *NAP~bu~* cannot make such determinations based on symbolic representations, but it should be expected to generally follow the same trends in the vast majority of cases.
 
 
 \newpage
