--- a/CogSciNAP_reSubmit.Rmd
+++ b/CogSciNAP_reSubmit.Rmd
@@ -17,11 +17,11 @@ abstract: |
   which have been exclusively based on discrete and symbolic machinery, and were not designed to be compatible with cognitive capacities, exhibit systematic gaps in empirical coverage.
   Against this backdrop, we propose an incorporation of symbol-based and signal-based models to adequately account for sonority with two complementary models.
   We claim that sonority is primarily a perceptual phenomenon related to pitch, driving the optimization of syllables as pitch-bearing units. We suggest a measurable acoustic correlate for sonority in terms of *periodic energy*, and we provide a novel principle that can account for syllabic well-formedness, the *Nucleus Attraction Principle* (NAP).
-  We present perception experiments that test our two NAP-based models against four traditional sonority models and we use a Bayesian data analysis approach to test and compare them. Our symbolic model outperforms all the other models we test, while our continuous bottom-up model manages to reach the second place, along the best tradtional models.
+  We present perception experiments that test our two NAP-based models against four traditional sonority models and we use a Bayesian data analysis approach to test and compare them. Our symbolic model outperforms all the other models we test, while our continuous bottom-up model manages to reach the second place, along the best traditional models.
     We interpret the results as providing strong support for our proposals:
   (i) the designation of periodic energy as sonority's correlate; 
   (ii) the incorporation of continuity in phonological models, and; 
-  (iii) the dual- model strategy that separates and integrates symbol-based top-down processes and signal-based bottom-up processes in perception.
+  (iii) the dual-model strategy that separates and integrates symbol-based top-down processes and signal-based bottom-up processes in perception.
   
 keywords          : "Sonority; Periodic energy; Bayesian data analysis; Phonetics and Phonology"
 wordcount         : "X"
@@ -716,12 +716,12 @@ designed in order to test our two NAP-based models (applying NAP with bottom-up 
 
 We use a Bayesian data analysis approach to test and compare the six different sonority models. Whereas all the different models are found to be capable of predicting the experimental results to a good extent, the symbolic top-down version of NAP is shown to be the superior model. The bottom-up model of NAP comes in second alongside a few of the traditional models. Interestingly, some of the results suggest a relatively high degree of complementarity between the two NAP models, even though they represent the same principle. This is a desirable result for our framework, which advocates the need for two complementary models, both dynamic and symbolic.
 
-Our synergy of proposals has many advantages over traditional sonority accounts, including methodological aspects, theoretical perspectives, and, essentially, a better empirical coverage. In Subsection \@ref(sec:discussion2) we interpret the results of the main confirmatory experiments and in Section \@ref(sec:genDiscussion) we address some relevant implications, where we discuss the division of labor between sonority and other phonotactic factors, demonstrated with a holistic account of the phenomenon of /s/-stop clusters (Subsection \@ref(sec:division)). Finally, we also discuss the debate about the universality of sonority in light of our work (Subsection \@ref(sec:projection)), before we present our concluisons in Section \@ref(sec:conclusions).
+Our synergy of proposals has many advantages over traditional sonority accounts, including methodological aspects, theoretical perspectives, and, essentially, a better empirical coverage. In Subsection \@ref(sec:discussion2) we interpret the results of the main confirmatory experiments and in Section \@ref(sec:genDiscussion) we address some relevant implications, where we discuss the division of labor between sonority and other phonotactic factors, demonstrated with a holistic account of the phenomenon of /s/-stop clusters (Subsection \@ref(sec:division)). Finally, we also discuss the debate about the universality of sonority in light of our work (Subsection \@ref(sec:projection)), before we present our conclusions in Section \@ref(sec:conclusions).
 
 <!-- usefulness of the top-down vs. bottom-up distinction instead of the common use of the phonology--phonetics dichotomy to express the distinction between discrete and continuous aspects of linguistic sound systems (Subsection \@ref(sec:dichotomies)). -->
 <!-- We also discuss the division of labor between sonority and other phonotactic factors, demonstrated with a holistic account of the phenomenon of /s/-stop clusters (Subsection \@ref(sec:division)), before we present our concluisons in Section \@ref(sec:conclusions).  -->
 
-In the remainder of this Introduction, we briefly present the relevant background on traditional sonority hierarchies and sonority principles (Subsection \@ref(sec:sonback)), and on the tension between discrete and symbolic entities on the one hand, and contious dynamic events on the other hand, in liguistic models of phonology (Subsection \@ref(sec:lingMod)).
+In the remainder of this Introduction, we briefly present the relevant background on traditional sonority hierarchies and sonority principles (Subsection \@ref(sec:sonback)), and on the tension between discrete and symbolic entities on the one hand, and continous dynamic events on the other hand, in liguistic models of phonology (Subsection \@ref(sec:lingMod)).
 
 <!-- emphasizing their rationale, their application, and their inherent flaws (Subsections \@ref(sec:hierarchies)-\@ref(sec:failures)).  -->
 
@@ -923,7 +923,7 @@ It is important to note that this view of sonority is explicitly and exclusively
 ###     Pitch intelligibility and periodic energy {#sec:periodicenergy}
 
 Pitch is a psychophysical phenomenon based on perception and cognition [see @plomp1976aspects; @plack2005psychophysics]. We can extract perception-related measurements from acoustics, i.e., not directly from the perceived sensation of a human subject but from the digitally-analyzed description of the physical sound in space. Using acoustics to cover auditory psychophysical phenomena is not a straight-forward task though. It requires a consistent and reliable association between acoustics on the one hand, and perception and cognition on the other hand.
-This task is potentially complicated further with a complex phenomenon like pitch, that is evidently sensitive to various aspects of the rich acoustic signal[see, e.g., @houtsma1995pitch; @shepard2001pitch; @moore2013anintro 203], as well as to our top-down expectations with regards to learned regularities of pitch behavior in the speech signal [@mcpherson2018diversity]. 
+This task is potentially complicated further with a complex phenomenon like pitch, that is evidently sensitive to various aspects of the rich acoustic signal [see, e.g., @houtsma1995pitch; @shepard2001pitch; @moore2013anintro 203], as well as to our top-down expectations with regards to learned regularities of pitch behavior in the speech signal [@mcpherson2018diversity]. 
 
 Fortunately, there are strong links that hold between pitch and measurable acoustic markers. This is evident from the extensive use of acoustic F0 measurements to estimate perceived pitch height. 
 Pitch estimations from F0 measurements is in fact quite reliable when dealing with specific types of audio such as speech, whereby the bulk of the pitch information is coming from a single source (i.e., one speaker) within a limited range of fundamental frequencies (mostly between 75--400 Hz, rarely below 50Hz or above 600Hz).
@@ -937,7 +937,7 @@ Given a causal link between perceived pitch intelligibility and linguistic sonor
 
 ##   Sonority "correlusions"  {#sec:correlusions}
 
-@parker2002quantifying found a little under 100 different proposals for correlates of sonority in the literature, and he tested five leading proposals in laboratory conditions: *intensity*, *intraoral air pressure*, *F~1~ frequency*, *total air flow* and *duration*. In his study, the tightest correlations with sonority classes were obtained for acoustic intensity measurements, a conclusion that was repeated and elaborated upon in @parker2008sound. Parker's conclusions about the role of acoustic intensity are very much in line with many influential studies in phonetics and phonology that also target acoustic intensity as the phonetic correlate of sonority [e.g. @sievers1893grundzugesk; @heffner1969generalsk; @ladefoged1975acourse; @clements1990role; @blevins1995syllable; and @gordon2012sonority, to name just a few prominent examples].
+@parker2002quantifying found a little under 100 different proposals for correlates of sonority in the literature, and he tested five leading proposals in laboratory conditions: *intensity*, *intraoral air pressure*, *F~1~ frequency*, *total air flow*, and *duration*. In his study, the tightest correlations with sonority classes were obtained for acoustic intensity measurements, a conclusion that was repeated and elaborated upon in @parker2008sound. Parker's conclusions about the role of acoustic intensity are very much in line with many influential studies in phonetics and phonology that also target acoustic intensity as the phonetic correlate of sonority [e.g. @sievers1893grundzugesk; @heffner1969generalsk; @ladefoged1975acourse; @clements1990role; @blevins1995syllable; and @gordon2012sonority, to name just a few prominent examples].
 <!-- [^cf-articultory]  -->
 
 The main problem with intensity-based accounts is related to the distinction between *causation* and *correlation*. Establishing causation from acoustic signals necessitates a theory that can reliably link between acoustic markers and consistent operations or processes in sensorimotor speech articulation and/or auditory speech perception. The problem with accounts that are based on acoustic intensity is that the general acoustic intensity of the signal does not consistently map to any aspect of human auditory perception, not even perceived loudness. 
@@ -967,7 +967,7 @@ The relative success of such metrics is not commonly motivated on perceptual gro
 
 At the heart of all sonority-based principles lies the idea that the most sonorous segment in a sequence is contained within the nucleus of the syllable. This idea in fact postulates a link between the amount of sonority and the nucleus position of the syllable. We adopt this fundamental insight that guides all other sonority principles in the development of the Nucleus Attraction Principle, but instead of adding further formal assumptions about non-overlapping segments with fixed sonority values and corresponding sonority slopes in symbolic time, the link between sonority and the syllabic nucleus is conceived of as a dynamic process in real time, whereby all the portions of the speech signal compete against each other for available nuclei (*available nuclei* can be thought of as the canonical syllables of words in the *mental lexicon*). 
 
-Sonority is therefore the quality that is capable of *attracting* the nucleus. The varying quantities of this quality, which temporally fluctuate along the stream of speech, determine which portions of speech are prone to succeed in attracting nuclei given their superior local sonority *mass*. The speech portions that fall between those successful attractors are syllabified in the margins of syllables, at onset and coda positions.[^cf-attraction]
+Sonority is therefore the quality that is capable of *attracting* the nucleus. The varying quantities of this quality, which temporally fluctuate along the stream of speech, determine which portions of speech are prone to succeed in attracting nuclei given their superior local sonority *mass*. The speech portions that fall between those successful attractors are syllabified in the margins of syllables, at onset, and coda positions.[^cf-attraction]
 
 [^cf-attraction]: This notion of prosodic *attraction* is, in fact, well-established in phonological theory, with descriptions of *weight sensitivity* in the stress systems of many unrelated languages, in which the stress is said to be attracted to heavy syllables.
 Heaviness is mainly the product of a longer vowel in the nucleus, and in some languages heaviness may also result from a (preferably sonorant) consonant in the coda [e.g., @mccarthy1979formalsk; @hayes1980metrical; @prince1990quantitative; @gordon2006syllableweight]. There are also analyses whereby 
@@ -1030,7 +1030,7 @@ This choice allows the presentation of a top-down model with a stronger explanat
 
 Moreover, it should be noted that since a top-down model in this framework is based on the distributional patterns of recognizable symbols, these distributions are, in fact, "blind" to their various bottom-up sources, which include a host of universal and idiosyncratic phonotactic pressures. A true top-down statistical learner is thus inherently "contaminated" by all the different sources that contribute to phonotactics in a given system, without a clear distinction between sonority and other factors. Thus, it remains an open question whether top-down inferences that target only sonority-based phonotactics can be modeled in a more direct and principled way than the one presented here with the symbolic model of NAP.
 
-Finally, the symbolic NAP model is necessary for the application of NAP in typological, diachronic and many traditional and current studies, where speech data is transcribed into strings of discrete symbols. 
+Finally, the symbolic NAP model is necessary for the application of NAP in typological, diachronic, and many traditional and current studies, where speech data is transcribed into strings of discrete symbols. 
 
 ##     Model Implementations in Dynamic and Symbolic Terms {#sec:modelimpOLD}
 
@@ -1070,7 +1070,7 @@ Thus, the ratio between periodic and aperiodic components in speech sounds readi
 \ex \emph{Voiceless Obstruents} $<$ \emph{Voiced Obstruents} $<$ \emph{Sonorants}  \label{ex:napscale}
 \end{exe}
 
-A further distinction in NAP's sonority hierarchy is based on the general presence or absence of articulatory contact, whic hcan be referred to as the distinction beteen *contoids* and *vocoids* [@pike1943phonetics].
+A further distinction in NAP's sonority hierarchy is based on the general presence or absence of articulatory contact, which can be referred to as the distinction beteen *contoids* and *vocoids* [@pike1943phonetics].
 A free and open vocal tract contributes to a potentially stronger and longer vocalic signal that can qualitatively enhance the potential periodic energy mass.
 This distinction effectively separates the sonorants into *sonorant vocoids* (glides and vowels) and *sonorant contoids* (nasals and liquids).
 <!-- [^cfrhotics]  -->
@@ -1127,7 +1127,7 @@ This can be summarized with the formula in \@ref(eq:naptdeq), see examples in Ta
 
 ###   Ordinal Sonority Scores {#sec:ordinalscores}
 
-Table \@ref(tab:ordinalscores) demonstrates and compares the scores of the five ordinal models (2$X$SSP, 2$X$MSD and *NAP~td~*) with different CCV cluster types. It shows that the main difference between the two sonority hierarchies, *H~exp~* and *H~col~*, concerns fricative-stop clusters like the */s/-stop* cluster *spV*, which are considered as either an onset fall (with the *H~exp~* hierarchy) or an onset plateau (with the *H~col~* hierarchy). When the MSD is applied, the two sonority hierarchies also show differences in ranking within onset rises, given their different treatment of obstruents: in models that use the *H~exp~* hierarchy there are four levels of obstruents (voiced and voiceless stops and fricatives) which are collapsed into one level in models that use the *H~col~* hierarchy. 
+Table \@ref(tab:ordinalscores) demonstrates and compares the scores of the five ordinal models (2 $\times$ SSP, 2 $\times$ MSD and *NAP~td~*) with different CCV cluster types. It shows that the main difference between the two sonority hierarchies, *H~exp~* and *H~col~*, concerns fricative-stop clusters like the */s/-stop* cluster *spV*, which are considered as either an onset fall (with the *H~exp~* hierarchy) or an onset plateau (with the *H~col~* hierarchy). When the MSD is applied, the two sonority hierarchies also show differences in ranking within onset rises, given their different treatment of obstruents: in models that use the *H~exp~* hierarchy there are four levels of obstruents (voiced and voiceless stops and fricatives) which are collapsed into one level in models that use the *H~col~* hierarchy. 
 This results in five distinct sonority rise scores in *MSD~exp~* model, but only two in the *MSD~col~* model, where also some of the trends differ (e.g. *smV* vs. *vlV* in the two MSD-based models).
 
 (ref:ordinalscores-caption) (\#tab:ordinalscores) Ordinal sonority scores
@@ -1248,7 +1248,7 @@ In order to be able to assess NAP's predictions in situations where both bottom-
 The goal of the experimental procedure is to tap into the cognitive cost that syllabification of different sequences incurs. To that end, we devised a forced-choice task that allows us to systematically compare response times of forced categorical decisions. Response times are linked with cognitive cost, which, in the context of the task, is understood as the result of syllabic ill-formedness. The working assumption is that worse-formed structures are harder to parse as a single syllable, which is reflected in a slower process altogether.
 
 This design uses nonce words to test different consonantal combinations in comparable structures. This type of experimental design is reminiscent of many of the experiments on sonority effects that Iris Berent and her colleagues have been publishing, starting with the seminal @berent2007we.[^cf-berents] 
-In their studies, the misperception and confusion between alternatives (e.g., *lbV*/*lə.bV*) is expected to be greater with worse-formed sonority clusters (e.g., greater confusion between *lbV*/*lə.bV* compared to *blV*/*bə.lV*), leading to a drop in categorical accuracy (e.g., a drop in correct identification of syllable number, or correct detection of similarity in a same/different task) accompanied by a grdual increase in response time.
+In their studies, the misperception and confusion between alternatives (e.g., *lbV*/*lə.bV*) is expected to be greater with worse-formed sonority clusters (e.g., greater confusion between *lbV*/*lə.bV* compared to *blV*/*bə.lV*), leading to a drop in categorical accuracy (e.g., a drop in correct identification of syllable number, or correct detection of similarity in a same/different task) accompanied by a gradual increase in response time.
 
 [^cf-berents]: Examples of further publications by Berent et al. with various experimental settings that test sonority effects in perception with behavioral data include: @berent2008language; @berent2010phonological; @berent2011syllable; @berent2012language; @berent2013phnological; @tamasi2014sensitivity; @zhao2015universalsk; @lennertz2015onthesonority. The following examples include also neurological data: @berent2014languagesk; @gomez2014language; @berent2015role. 
 
@@ -1260,7 +1260,7 @@ Only the single-vowel productions were considered as targets, and an accurate re
 By focusing on the response time of "correct" responses to the target words we, in fact, measure the time it took participants to decide that a given single-vowel stimulus is monosyllabic. 
 We can therefore interpret the reaction times of monosyllabic responses to single-vowel targets as reflective of the processing cost of assigning one nucleus to a given target stimulus with one vowel.
 
-As detailed below, the experiments were designed as syllable count tasks, i.e., a meta-linguistic forced-choice task. We assume that this design activates top-down inferences which urge subjects to think about possible syllables in their language. However, since we want to also tap into subjects' bottom-up inferences we present these nonce words as real words in another unkown language, uttered by a native speaker of that foreign language. For that matter, the German-speaking sbjects listened to a stimuli set that was comprised of recordings of a native Hebrew-speaking speaker, AA (the first author). Likewise, the Hebrew-speaking subjects listened to a stimuli set that was comprised of recordings of a native German-speaking speaker, HN.
+As detailed below, the experiments were designed as syllable count tasks, i.e., a meta-linguistic forced-choice task. We assume that this design activates top-down inferences which urge subjects to think about possible syllables in their language. However, since we want to also tap into subjects' bottom-up inferences we present these nonce words as real words in another unkown language, uttered by a native speaker of that foreign language. For that matter, the German-speaking subjects listened to a stimuli set that was comprised of recordings of a native Hebrew-speaking speaker, AA (the first author). Likewise, the Hebrew-speaking subjects listened to a stimuli set that was comprised of recordings of a native German-speaking speaker, HN.
 
 Note that since the bottom-up predictions of NAP are derived via measurements of acoustic signals of particular productions rather than from fixed symbolic predictions, the assumption that all things other than the controlled variable are equal in the experimental stimuli should hold also for a large degree of variation that occurs in natural speech. Thus, if a certain segment in one item is slightly longer, shorter, louder or softer than in other comparable tokens, bottom-up NAP is designed to directly account for this variation, while the other symbol-based ordinal models essentially assume that such variation is mostly negligible as it cannot survive the abstraction into phonemes. This allows us to opt for a slightly more ecologically valid experimental paradigm, by using natural speech recordings that were designed and selected to sound as similar as possible, rather than using synthesized speech, which would have allowed a higher degree of similarity between tokens.
 
@@ -1421,7 +1421,7 @@ print(monosyl_plot_abs)
 
 ##  Designs
 
-The details in the following analyses address three separate experimetns: 
+The details in the following analyses address three separate experiments: 
 (i) an exploratory pilot experiment with 12 German speaking subjects listening to stimulus set AA (Hebrew speaker), *Experiment 1*; (ii) a confirmatory experiment with 51 German speaking subjects listening to stimulus set AA, *Experiment 2*; and (iii) a confirmatory experiment with 33 Hebrew speaking subjects listening to stimulus set HN (German speaker), *Experiment 3*.
 
 
@@ -1601,7 +1601,7 @@ The first effort, which took place in 2019, collected data from student voluntee
 
 ## Data analysis {#sec:datanlysis}
 
-We use a Bayesian data analysis approach implemented in the probabilistic programming language  *Stan* [@Stan2018] using the model wrapper package *brms* [@R-brms_a; @R-brms_b] in *R* [@R-base].^[The complete list of *R* packages that we used is:  `r cite_r("bibs/r-references.bib")`.] An important motivation for using the Bayesian approach is that it    is easy to fit fully hierarchical models with the so-called "maximal random effect structure", which provide the most conservative estimates of uncertainty [@SchielzethForstmeier2009]. In all our models, we use regularizing priors, which we detail below. These priors are minimally informative and have the objective of yielding stable inferences [@chung2013weakly; @gelman2008weakly; @GelmanEtAl2017]. @NicenboimVasishth2016 and @VasishthEtAl2017EDAPS discuss the Bayesian approach in detail in the context of psycholinguistic and phonetic sciences research. We fit the models with four chains and 4000 iterations each, of which 1000 iterations were the burn-in or warm-up phase. In order to assess convergence, we verify that there are no divergent transitions, that all the $\hat{R}$  (the between- to within-chain variances) are close to one,  that the number of effective sample size are at least 10\% of the number of post-warmup samples, and we visually inspect the chains.
+We use a Bayesian data analysis approach implemented in the probabilistic programming language  *Stan* [@Stan2018] using the model wrapper package *brms* [@R-brms_a; @R-brms_b] in *R* [@R-base].^[The complete list of *R* packages that we used is:  `r cite_r("bibs/r-references.bib")`.] An important motivation for using the Bayesian approach is that it    is easy to fit fully hierarchical models with a "maximal random effect structure", which provide the most conservative estimates of uncertainty [@SchielzethForstmeier2009]. In all our models, we use regularizing priors, which we detail below. These priors are minimally informative and have the objective of yielding stable inferences [@chung2013weakly; @gelman2008weakly; @GelmanEtAl2017]. @NicenboimVasishth2016 and @VasishthEtAl2017EDAPS discuss the Bayesian approach in detail in the context of psycholinguistic and phonetic sciences research. We fit the models with four chains and 4000 iterations each, of which 1000 iterations were the burn-in or warm-up phase. In order to assess convergence, we verify that there are no divergent transitions, that all the $\hat{R}$  (the between- to within-chain variances) are close to one,  that the number of effective sample size are at least 10\% of the number of post-warmup samples, and we visually inspect the chains.
 
 For the statistical models, we take into account that the traditional sonority models and the top-down version of NAP (i.e., *SSP~col~* , *SSP~exp~*, *MSD~col~*, *MSD~exp~*, and *NAP~td~*) are ordinal models, while the bottom-up version of NAP (*NAP~bu~*) is a continuous model. The ordinal models predict that certain groups of onset clusters will be better or worse-formed than other group depending on an ordinal score, but they do  not assume that the score will be equidistant with respect to its effect on the response variable, log-transformed response times. For this reason, the discrete scores of these models are assumed to have a monotonic effect on the log-response time in our task, that is, having a monotonically increasing or decreasing relationship with the log-response time, while  the distance between groups are estimated from the data [@burknerModelingMonotonicEffects2018]. 
 
@@ -1717,7 +1717,7 @@ For all the models, the well-formedness score shows a clear effect on response t
 * For *NAP~td~*: `r estHeb_NAP_td`.
 * For *NAP~bu~*: `r estHeb_NAP_bu`.
 
-Notice that the posterior of the effect of well-formedness, $\hat\beta$, is not comparable across models. For the ordinal models, it represents the distance between two adjacent categories had they been equidistant, or in other words, $\hat\beta$ multiplied by the number of categories minus one represents the increase in log-scale between the first and the last category. This means that it is highly affected by the number of categories. For the continuous bottom-up model, $NAP_{bu}$, $\beta$ represents, the increase in log-scale for one unit in the well-formedness scale. To make it concrete, between, /lpal/ and /lkal/ there are `r lkal_nap -lpal_nap` units (`r lkal_nap` and `r lpal_nap` respectively); and between /lkal/ and /spal/ there are `r spal_nap  -lkal_nap` units (since their NAP scores are `r spal_nap` and `r lkal_nap` respectively). However, for all the models, $\hat\beta$ is negative, indicating that well-formedness is associated with faster responses. See Appendix \@ref(appendix:b) for the complete output of the models.
+Notice that the posterior of the effect of well-formedness, $\hat\beta$, is not comparable across models. For the ordinal models, it represents  the average increase (or decrease) in the dependent variable associated with two neighboring factor levels, or in other words, $\hat\beta$ multiplied by the number of categories minus one represents the increase in log-scale between the first and the last category. This means that it is highly affected by the number of categories. For the continuous bottom-up model, $NAP_{bu}$, $\beta$ represents, the increase in log-scale for one unit in the well-formedness scale. To make it concrete, between, /lpal/ and /lkal/ there are `r lkal_nap -lpal_nap` units (`r lkal_nap` and `r lpal_nap` respectively); and between /lkal/ and /spal/ there are `r spal_nap  -lkal_nap` units (since their NAP scores are `r spal_nap` and `r lkal_nap` respectively). However, for all the models, $\hat\beta$ is negative, indicating that well-formedness is associated with faster responses. See Appendix \@ref(appendix:b) for the complete output of the models.
 
 The results shown here reflect the final state of the models in the exploratory stage, which is the same as the state of the models in the confirmatory stage. Importantly, the results of the confirmatory studies, Experiments 2-3, which are statistically much more robust, remain consistent with those of Experiment 1, which had a relatively small number of observations. As such, Experiment 1 was not designed to distinguish between the models and it will not be shown here further in the presentation of the results. 
 
@@ -2162,7 +2162,7 @@ While the model fits give us an insight into the behavior of each model with res
 #### Experiment 2
 
 A bird's eye view of all the six models in Experiment 2 is availale in Figure \@ref(fig:SonFitAll). The results of the model comparison in Experiment 2 are available in Table \@ref(tab:resultsmodels). It reveals a very clear advantage of *NAP~td~* over all the other models. 
-The difference in elpd scores from the next three models---*SSP/MSD~col~* and *NAP~bu~*---is about 6 standrd errors (considering that the difference is around 90 elpd and the corresponding standard error is around 15), a very robust lead for *NAP~td~*. 
+The difference in elpd scores from the next three models---*SSP/MSD~col~* and *NAP~bu~*---is about 6 standard errors (considering that the difference is around 90 elpd and the corresponding standard error is around 15), a very robust lead for *NAP~td~*. 
 The small differences between the next three models (*SSP/MSD~col~* and *NAP~bu~*) make them all indistinguishable in the second place.
 The two traditional models that are based on the *H~exp~* hierarchy---*SSP/MSD~exp~*---are similar to each other at the last place, only marginally better than the null model.
 
@@ -2311,7 +2311,7 @@ predictions$NAP_bu %>%
 
 A bird's eye view of all the six models in Experiment 3 is availale in Figure \@ref(fig:SonFitAllHeb). 
 The results of the model comparison of Experiment 3 (see Table \@ref(tab:resultsmodelsHeb)) reveal a borderline advantage of *NAP~td~* over all the other models.
-The difference in elpd scores from the next two models---*MSD~col~* and *NAP~bu~*---is only about 2 standrd errors (considering the difference at around 10 elpd and the corresponding standard error at around 5),
+The difference in elpd scores from the next two models---*MSD~col~* and *NAP~bu~*---is only about 2 standard errors (considering the difference at around 10 elpd and the corresponding standard error at around 5).
 
 *SSP~col~* is more clearly distinguishable from *NAP~td~*, with a difference that is almost 3 standard errors (about 20:7). *MSD~col~* and *NAP~bu~* are therefore only barely distinguishable from *SSP~col~* below them, and from *NAP~td~* above them. The two traditional models that are based on the *H~exp~* hierarchy---*SSP/MSD~exp~*---are, again, very clearly the worst in the comparison.
 
@@ -2493,7 +2493,7 @@ A superficial formal generalization that can illustrate these results in symboli
 #		General discussion {#sec:genDiscussion}
 
 Our experimental results provide strong support for our synergy of proposals, including our choice of sonority's perceptual basis and acoustic correlate, the incorporation of continuous entities and in phonological models, and the dual-route modeling strategy that accounts for both top-down and bottom-up inferences with separate compatible machinery. The following subsections discuss two important implications that are borne out of our interpretation of the results: 
-(i) in the following subsection (\@ref(sec:division)) we discuss a potential phonotactic division of labor, demonstrated with a more holistic account of /s/-stop clusters; 
+(i) in  Subsection \@ref(sec:division) we discuss a potential phonotactic division of labor, demonstrated with a more holistic account of /s/-stop clusters; 
 (ii) in Subsection \@ref(sec:projection) we discuss the universality of sonority, with special attention to the body of works by Iris Berent and her colleagues, as well as to the works of the physicist and theoretical biologist, Howard Pattee (Subsection \@ref(sec:compofmind)).
 
 ##		Phonotactic Division of Labor {#sec:division} 
@@ -2512,7 +2512,7 @@ The main type of exception that is used to explain sibilant-initial clusters is 
 A slightly different theoretical solution with similar results is to assert that */s/-stop* clusters are, in fact, a single complex segment [see, e.g., @fudge1969syllables; @weijer1996segmental] such that, again, there simply is no cluster to solve in theoretical accounts [for an overview, see @goad2016sonority].
 
 Those theoretical tweaks are not without merit as they follow a strong intuition that marginal sibilants are somehow "outside" the scope of syllabic processes. This intuition is supported by evidence of some unique behaviors of marginal sibilants, such as the kinematic data presented in @hermes2013phonologysk, which finds unique coordination patterns in articulation of sibilant-initial consonantal gestures in Italian. 
-We do not have enough data on the subject to make any determination yet, but these findings are so far not incosistent with NAP-based accounts. Periodic energy has prosodic roles to play in carrying the pitch and the overall prosodic strength at the nucleus of the syllable while marginal voiceless elements might be timed with different considerations. For example, it may be beneficial to prolong marginal voiceless elements to increase their recoverability without the risk of increased nucleus competition.
+We do not have enough data on the subject to make any determination yet, but these findings are so far not inconsistent with NAP-based accounts. Periodic energy has prosodic roles to play in carrying the pitch and the overall prosodic strength at the nucleus of the syllable while marginal voiceless elements might be timed with different considerations. For example, it may be beneficial to prolong marginal voiceless elements to increase their recoverability without the risk of increased nucleus competition.
 
 Eventually, it is important to remember that the problem with */s/-stop* clusters is not that they are common, and, at the same time, unique. The problem with */s/-stop* clusters is that traditional sonority principles fail to account for them in consistent manners, without resorting to exceptions. 
 
